// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stack synthesis merges all elements into a single output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"MyStack\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"stack\\": {
          \\"terraform\\": {
            \\"backend\\": {
              \\"remote\\": {
                \\"organization\\": \\"test\\",
                \\"workspaces\\": {
                  \\"name\\": \\"test\\"
                }
              }
            }
          }
        },
        \\"aws_topic\\": [
          \\"//\\",
          \\"prop2\\",
          \\"prop3\\",
          \\"provisioner\\"
        ]
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"foo\\"
      }
    ]
  },
  \\"resource\\": {
    \\"aws_bucket\\": {
      \\"Resource1\\": {
        \\"foo\\": \\"Resource1\\",
        \\"prop1\\": \\"bar1\\",
        \\"prop2\\": 1234,
        \\"prop3\\": {
          \\"name\\": \\"should be overwritten in resource 2\\",
          \\"value\\": 5678
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"MyStack/Resource1\\",
            \\"uniqueId\\": \\"Resource1\\"
          }
        }
      }
    },
    \\"aws_topic\\": {
      \\"Resource2\\": {
        \\"foo\\": \\"Resource2\\",
        \\"prop1\\": \\"bar1\\",
        \\"prop3\\": {
          \\"name\\": \\"test\\",
          \\"value\\": 5678
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"MyStack/Resource2\\",
            \\"uniqueId\\": \\"Resource2\\"
          }
        },
        \\"provisioner\\": [
          {
            \\"local-exec\\": {
              \\"command\\": \\"echo 'Hello World' >example.txt\\"
            }
          }
        ]
      }
    }
  },
  \\"module\\": {
    \\"EksModule\\": {
      \\"cluster_name\\": \\"my_cluster_name\\",
      \\"source\\": \\"terraform-aws-modules/eks/aws\\",
      \\"version\\": \\"7.0.1\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"MyStack/EksModule\\",
          \\"uniqueId\\": \\"EksModule\\"
        }
      }
    }
  },
  \\"output\\": {
    \\"eks_version\\": {
      \\"value\\": \\"7.0.1\\"
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"remote\\": {
        \\"organization\\": \\"test\\",
        \\"workspaces\\": {
          \\"name\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`stack synthesis no flags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"MyStack\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"stack\\": {}
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"foo\\"
      }
    ]
  },
  \\"resource\\": {
    \\"aws_bucket\\": {
      \\"MyStack_Resource1_1D44B20C\\": {
        \\"foo\\": \\"MyStack_Resource1_1D44B20C\\",
        \\"prop1\\": \\"bar1\\",
        \\"prop2\\": 1234,
        \\"prop3\\": {
          \\"name\\": \\"should be overwritten in resource 2\\",
          \\"value\\": 5678
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"MyStack/Resource1\\",
            \\"uniqueId\\": \\"MyStack_Resource1_1D44B20C\\"
          }
        }
      }
    }
  },
  \\"module\\": {
    \\"MyStack_EksModule_1F7A8254\\": {
      \\"cluster_name\\": \\"my_cluster_name\\",
      \\"source\\": \\"terraform-aws-modules/eks/aws\\",
      \\"version\\": \\"7.0.1\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"MyStack/EksModule\\",
          \\"uniqueId\\": \\"MyStack_EksModule_1F7A8254\\"
        }
      }
    }
  },
  \\"output\\": {
    \\"MyStack_eksversion_FB719174\\": {
      \\"value\\": \\"7.0.1\\"
    }
  }
}"
`;
